resources/css/scss/base/_forms.scss
/* ... */
.sec_form {
    opacity: 0.9;
    padding: 35px 40px 30px;        
    font-family: $body-font-family;
    
    .gfield_label,
    .hidden_sub_label {
        display: none;
    }

    
    h4 {
        font-style: normal;
        font-weight: bold;
        font-size: 22px;
        font-family: $body-font-family;
        text-align: center;
        text-transform: capitalize;
        color: #FFFFFF;
    }

    p{
        &.subheader {
            text-align: center !important;
            @include media(max-width,782px){
                text-align: left !important;
            }
        }

        &.small {
            font-family: $body-font-family;
            font-style: normal;
            font-weight: 400;
            font-size: 13px;
            line-height: 1.4;
            letter-spacing: 0.03em;
            color: rgba(255, 255, 255, 0.8);

            @include media(max-width,375px) {
                line-height: 1.4;
                font-size: 11px;
            }
        }
    }


    .wp-block-group__inner-container {
        padding-right:0;
        padding-left:0;
    }

    &_light {
        background-color: $color-white;
        .gform_button {
    
            &.button {
                color: $color-dark;

                &:after {
                    color: $color-dark;
                    background-image: url(../img/icn-arrow-r.svg);
                }

                &:hover {
                    color: $color-white;
                    &:after {
                        color: $color-white;
                        background-image: url(../img/icn-arrow-rw.svg);
                    }
                }
                
            }
        }
        @include media(max-width, 1023px){
            padding: 0;
        }

    }
        
    .gform_button {

        &.button {
            background-color:  transparent;
        }
    }

    .gform_footer {
        margin-bottom: 10px;
        padding: 16px;
        border-radius:0;
        border: 2px solid #DB323F;       
        transition: all 0.3s ease;     

        &:hover {
            background-color:  #DB323F;
        }
        
    }

    .ginput_container_name {

        @include media(min-width, 1023px){
            display: flex;
            .name_first {
                width: 49%;
            }
            .name_last {
                width: 50%;
            }
        }
    }

    .gform_validation_errors{
        margin-bottom: 0;

        .gform_submission_error {
            font-size: 16px;
            color: #DB3441;
            margin-bottom: 0;
        }
    }
    
    .validation_message {
        font-size: 14px;
        color: #DB3441;
        margin-bottom: 0;
    }

    @include media(max-width, 480px) {
        .gform_footer {
            padding: 0;
            
        }
    }

    .ct_field {

        padding-right: 0!important;
        
        .ginput_container {              
                       
            input,
            select, 
            textarea {
                color: #858689;                    
                margin-top: 12px !important;
                margin-bottom: 0px !important;
                padding: 15px 20px !important;
                background-color: #fff;
                font-size: 20px!important;           
                font-weight: 300;
                font-family: $body-font-family!important;    
                line-height: 1.2;

                &::placeholder{
                    color: #858689;

                }
                
                @include media(max-width, 375px) {
                    font-size: 14px!important;           
                }
            }

            &.ginput_container_address {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
                justify-content: space-between;

                .ginput_address_line_2 {
                    width: 100%;
                }

                .ginput_left, .ginput_right {
                    width: 32.33%;
                    margin-right: 5px;

                    @include media (max-width, 480px){

                    }


                }

                .ginput_address_zip {
                    margin-right: 0;
                }
                
                @include media(max-width, 1158px) {
                    .ginput_left, .ginput_right {
                        float: left;
                        width: 50%;
                    }

                    .ginput_left {
                        &.ginput_address_city {
                            margin-right: 8px;
                            padding-right: 2px;                                
                        }
                    }
                    
                    
                    .ginput_right {
                        
                        &.ginput_address_state{
                            margin-right: -8px;
                            padding-right: 8px;  
                        }                         
                    }
                }
            }    
        }
    }
    @include media (max-width, 782px){
        padding-top: 50px !important;
        padding-bottom: 50px !important;
    }
    
}
/* ... */

